objects/Activity.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Assignment_Group__c</fullName>
        <description>Id for group assigned automatically assigned to specific tasks</description>
        <label>Assignment Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Time__c</fullName>
        <description>Estimated number of hours/days to complete a Task</description>
        <inlineHelpText>Enter estimated time to complete a task</inlineHelpText>
        <label>Estimated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_Type__c</fullName>
        <description>This field describes the current Maintenance category for a particular Maintenance Task</description>
        <label>Maintenance Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Task__c</fullName>
        <description>This is a text field to house the parent Task Id for maintenance subtasks.</description>
        <label>Parent Task</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SubType__c</fullName>
        <description>This field is not required. This field is manually populated. This field describes the current Maintenance type for a particluar Maintenance Task. It is dependent on the LLC_BI__Maintenance_Type__c (Maintenance Category)</description>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Maintenance_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Limit Change</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__isTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will show the Maintenance System that the task is a template task for Maintenance Subtasks.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>LLC_BI__AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Ancillary_Service_Task_Templates</fullName>
        <columns>LLC_BI__isTemplate__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__isTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ancillary Service Task Templates</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>